@@ -3,6 +3,8 @@ Revision history for DBIx::Class
     * New Features / Changes
         - New method ResultSource columns_info method, returning multiple
           pairs of column name/info at once
+        - $rs->search now throws when called in void context, as it makes
+          no sense (and is nearly always a sign of a bug/misdesign)
         - NULL is now supplied unquoted to all debug-objects, in order to
           differentiate between a real NULL and the string 'NULL'
 
